tests/src/frontend/typechecking/invalid/late_static1.sk
base class Foo {
  static fun abs(): void;
  static fun bad(): void {
    static::abs()
  }
}
